apps/prism/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prism
  namespace: prism
spec:
  selector:
    app: prism
  ports:
    - port: 80
      targetPort: 8080
